inital refactor and improvements

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -43,8 +43,8 @@ a {
 
 .card-header {
     padding: 5px 10px;
-    color: #004575;
-    background-color: #d1dbe6;
+    color: #ffffff;
+    background-color: #004575;
     margin-top: 0;
 }
 
