--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -8,7 +8,8 @@
 
     <div class="error-box" align="center">
         <img class="ui medium image error-image" src="{{ url_for('static', filename='img/error.png') }}">
-        <h1 class="ui header">{{ message }}<h1>
+        <h1 class="ui header">{{ message }}</h1>
+        <div>{{ detail }}</div>
     </div>
 
 {% endblock %}
