--- a/app/templates/pages/username.html
+++ b/app/templates/pages/username.html
@@ -17,7 +17,7 @@
                             <th data-sort="string">Last Use</th>
                             <th data-sort="string">Product</th>
                             <th data-sort="string">Type</th>
-                            <th data-sort="int">Total Time</th>
+                            <th data-sort="int">Session Time</th>
                         </tr>
                         </thead>
                         <tbody>
