--- a/app/templates/pages/users.html
+++ b/app/templates/pages/users.html
@@ -24,7 +24,7 @@
                 <tr>
 
                     <th>User</th>
-                    <th>Total Time</th>
+                    <th>Cumulative Time</th>
                     <th>Last Use</th>
                 </tr>
                 </thead>
