--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -118,14 +118,14 @@
         {% for server_key, server_value in detail.items() %}
             <div class="card card-wide">
                 <div class="card-content padding-left-0 padding-right-0">
-                    <div class="panel panel"><h4 class="font-size-2 trailer-0">{{ server_key }}</h4></div>
+                    <div class="panel panel"> <a href="{{ url_for('servername', servername=server_key) }}" class="link-darkest-gray"><h4 class="font-size-2 trailer-0">{{ server_key }}</h4></a></div>
                     <div class="grid-container leader-half trailer-half">
-                        <div class="column-24">
+                        <div class="column-24 ">
                             <div class="block-group block-group-4-up">
                                 {% for product_key, product_value in server_value.items() %}
-                                    <div class="card {{ 'card-bar-dark-blue' if  product_value['active'] == 0  else 'card-bar-green' }} block">
+                                    <div class="card {{ 'card-bar-dark-blue' if  product_value['active'] == 0  else 'card-bar-green' }} block  trailer-half">
                                         <div class="card-content">
-                                            <div class="font-size-1 trailer-half">{{ product_key }}</div>
+                                            <div class="font-size-1 trailer-half "><a class="link-darkest-gray" href="{{ url_for('productname',  product_name=product_key) }}">{{ product_key }}</a></div>
                                             <div class="trailer-half">
                                                 <mark class="label {{ 'label-yellow' if  product_value['active'] == product_value['total'] else '' }} modifier-class">{{ product_value['total'] - product_value['active'] }}
                                                     of {{ product_value['total'] }} available
