--- a/app/templates/pages/workstations.html
+++ b/app/templates/pages/workstations.html
@@ -1,33 +1,31 @@
 {% extends 'layout.html' %}
 
 {% block title %} Workstations {% endblock %}
+
 {% block banner %}
     Workstations
 {% endblock %}
+
 {% block content %}
     <div class="grid-container">
-    <div class="card block trailer-1">
-        <div class="panel">
-            <div class="panel-header">All Workstations</div>
-            <div class="loader is-active padding-leader-3 padding-trailer-3">
-                <div class="loader-bars"></div>
-                <div class="loader-text">Loading...</div>
-            </div>
-        {% if ws %}
-            <table class="modifier-class table-striped display trailer-1" id="ws-table" cellspacing="0" width="100%">
-                <thead>
-                <tr>
-                    <th>Workstation</th>
-                    <th>Cumulative Time</th>
-                    <th>Last Use</th>
-                </tr>
-                </thead>
-                    <script>$(".loader").hide()</script>
+        <div class="card block trailer-1">
+            <div class="panel">
+                <div class="panel-header">All Workstations</div>
+                {% if ws %}
+                    <table class="modifier-class table-striped display trailer-1" id="ws-table" cellspacing="0"
+                           width="100%">
+                    <thead>
+                    <tr>
+                        <th>Workstation</th>
+                        <th>Cumulative Time</th>
+                        <th>Last Use</th>
+                    </tr>
+                    </thead>
                     <tbody>
                     {% for w in ws %}
                         <tr class='clickable-row' data-href="{{ url_for('workstationname', workstationname=w.name) }}">
                             <td>{{ w.name }}</td>
-                                <td data-sort="{{ w.time_sum }}">{{ w.time_sum | delta_time}}</td>
+                            <td data-sort="{{ w.time_sum }}">{{ w.time_sum | delta_time }}</td>
 
                             {% if w.time_in == None %}
                                 <td><span class="icon-ui-check-mark icon-ui-green font-size-1">Active</span></td>
@@ -38,11 +36,10 @@
                     {% endfor %}
                     </tbody>
                 {% else %}
-                    <script>$(".loader").hide()</script>
                     No Workstation Data.
                 {% endif %}
-            </table>
+                </table>
+            </div>
         </div>
-    </div>
     </div>
 {% endblock %}
