TODO: make Log Clear functionality

--- a/app/templates/pages/servername.html
+++ b/app/templates/pages/servername.html
@@ -30,9 +30,10 @@
                             {% endfor %}
                             </tbody>
                         </table>
-                        <div>
-                            <a class="btn" href="{{ url_for('clear_log') }}">Clear Log</a>
-                        </div>
+{#                        TODO: Clear Log button#}
+{#                        <div>#}
+{#                            <a class="btn" href="{{ url_for('clear_log') }}">Clear Log</a>#}
+{#                        </div>#}
                     {% else %}
                         No issues found.
                     {% endif %}
