--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
     <title>ArcGIS License Tracker - {% block title %}{% endblock %}</title>
-{#    <meta http-equiv="refresh" content="60"/>#}
+    <meta http-equiv="refresh" content="60"/>
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/calcite-web.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
